# albums-picker

./: .gitignore  MANIFEST.in  README.md  album.py  albums.json  main.py  pyproject.toml  requirements.txt  rich_printer.py
src/albumsPicker/: album.py  albums.json  albums_picker.py  qobuz_essential_discography.json
