[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "albums-picker"
version = "1.0.1"
authors = [
  { name="Santiago Mondragon", email="santiago.mondragon224@gmail.com" },
]
description = "Picks a random album from 1001 Albums You Must Hear Before You Die"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.7.1"
]

[project.urls]
Homepage = "https://github.com/santi224m/1001-albums-picker"
Issues = "https://github.com/santi224m/1001-albums-picker/issues"

[project.scripts]
albumsPicker = "albumsPicker.albums_picker:main"
